--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -10,4 +10,7 @@ crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
 anyhow = "1"
+epub = "2.0.0"
 flutter_rust_bridge = "1"
+lazy_static = "1.4.0"
+parking_lot = "0.12.1"
