--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -10,7 +10,10 @@ crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
 anyhow = "1"
+base64 = "0.21.0"
 epub = "2.0.0"
 flutter_rust_bridge = "1"
 lazy_static = "1.4.0"
 parking_lot = "0.12.1"
+serde = { version = "1.0.155", features = ["derive"] }
+ureq = { version = "2.6.2", features = ["json"] }
