--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -15,5 +15,6 @@ epub = "2.0.0"
 flutter_rust_bridge = "1"
 lazy_static = "1.4.0"
 parking_lot = "0.12.1"
+rusqlite = { version = "0.28.0", features = ["bundled"] }
 serde = { version = "1.0.155", features = ["derive"] }
 ureq = { version = "2.6.2", features = ["json"] }
