--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   meta: ^1.8.0
   flutter_html: ^2.2.1
   google_fonts: ^4.0.3
+  file_picker: ^5.2.5
 
 dev_dependencies:
   flutter_test:
