--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -11,10 +11,11 @@ crate-type = ["cdylib", "staticlib"]
 [dependencies]
 anyhow = "1"
 base64 = "0.21.0"
+bincode = "1.3.3"
 epub = "2.0.0"
 flutter_rust_bridge = "1"
 lazy_static = "1.4.0"
 parking_lot = "0.12.1"
-rusqlite = { version = "0.28.0", features = ["bundled"] }
 serde = { version = "1.0.155", features = ["derive"] }
 ureq = { version = "2.6.2", features = ["json"] }
+uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
