--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_html: ^2.2.1
   google_fonts: ^4.0.3
   file_picker: ^5.2.5
+  permission_handler: ^10.2.0
+  path_provider: ^2.0.13
 
 dev_dependencies:
   flutter_test:
