--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   file_picker: ^5.2.5
   permission_handler: ^10.2.0
   path_provider: ^2.0.13
+  collection: ^1.17.0
 
 dev_dependencies:
   flutter_test:
