--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   permission_handler: ^10.2.0
   path_provider: ^2.0.13
   collection: ^1.17.0
+  shared_preferences: ^2.0.20
+  freezed_annotation: ^2.2.0
+  page_transition: ^2.0.9
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +58,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   ffigen: ^7.2.4
+  build_runner: ^2.3.3
+  freezed: ^2.3.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
