--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -11,10 +11,13 @@ crate-type = ["cdylib", "staticlib"]
 [dependencies]
 anyhow = "1"
 base64 = "0.21.0"
+bincode = "1.3.3"
+directories = "5.0.0"
 epub = "2.0.0"
 flutter_rust_bridge = "1.72.1"
 once_cell = "1.17.1"
 parking_lot = "0.12.1"
+rayon = "1.7.0"
 rusqlite = { version = "0.29.0", features = ["bundled"] }
 serde = { version = "1.0.159", features = ["derive"] }
 thiserror = "1.0.40"
