--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shared_preferences: ^2.0.20
   freezed_annotation: ^2.2.0
   page_transition: ^2.0.9
+  html: ^0.15.2
 
 dev_dependencies:
   flutter_test:
