--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -16,6 +16,7 @@ epub = "2.0.0"
 flutter_rust_bridge = "1.72.1"
 once_cell = "1.17.1"
 parking_lot = "0.12.1"
+percent-encoding = "2.2.0"
 rayon = "1.7.0"
 rusqlite = { version = "0.29.0", features = ["bundled"] }
 serde = { version = "1.0.159", features = ["derive"] }
