--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   page_transition: ^2.0.9
   html: ^0.15.2
+  flex_color_scheme: ^7.0.1
 
 dev_dependencies:
   flutter_test:
