--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -17,8 +17,9 @@ flutter_rust_bridge = "1.72.1"
 once_cell = "1.17.1"
 parking_lot = "0.12.1"
 percent-encoding = "2.2.0"
+r2d2 = "0.8.10"
+r2d2_sqlite = { version = "0.21.0", features = ["bundled"] }
 rayon = "1.7.0"
-rusqlite = { version = "0.29.0", features = ["bundled"] }
 serde = { version = "1.0.159", features = ["derive"] }
 thiserror = "1.0.40"
 ureq = { version = "2.6.2", features = ["json"] }
