--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   page_transition: ^2.0.9
   html: ^0.15.2
   flex_color_scheme: ^7.0.1
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
